# csmakeci-ui

./: .gitignore  README.md  pyproject.toml
csmakeci_ui/: __main__.py  cli.py  client.py  server.py
csmakeci_ui/secrets/: __init__.py  base.py  local.py  vault.py
csmakeci_ui/static/: app.js  styles.css
csmakeci_ui/templates/: base.html  dashboard.html  run.html  settings.html  visualize.html
