[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "csmakeci-ui"
version = "0.1.0"
description = "Web UI for csmakeci-server"
requires-python = ">=3.9"
dependencies = [
    "flask>=3.0",
    "pyyaml>=6.0",
]

[project.scripts]
csmakeci-ui = "csmakeci_ui.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["csmakeci_ui*"]

[tool.setuptools.package-data]
"csmakeci_ui" = ["templates/**", "static/**"]
